# SortingMachine

./: CMakeLists.txt  README.md  main.cpp
Sort/: BubbleSort.cpp  BubbleSort.h  InsertionSort.cpp  InsertionSort.h  QuickSort.cpp  QuickSort.h  SortInterface.h
SortFactory/: AlgorithmModeFactory.cpp  AlgorithmModeFactory.h  ComparisionModeFactory.cpp  ComparisionModeFactory.h  SortFactoryInterface.h
